
(rule
 (targets coq-pkgs)
 (deps
  (package coq-simple-io))
 (action
  (run npx %{env:pkgtool=jscoq} build workdir/src
                   --load ../extlib/coq-pkgs/extlib.coq-pkg
                   --top SimpleIO --package coq-pkgs/simpleio.coq-pkg)))

(alias
 (name all)
 (deps package.json))

(dirs workdir)
